--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,14 @@
-V basilico non viene dato cliccando su basilico_3,
+X basilico non viene dato cliccando su basilico_3,
 ma se ho il basilico nell'inv allora da'
-non so cosa ho fatto ma funzione *shrug*
+se prendo dei limoni e poi basilico o funghi, funziona, se prendo prima il basilico non prendo
+le foglie ma solo la radice, ma poi non prendo ne funghi ne limoni
+se prendo un fungo non raccolgo nulla, ma subito dopo poso una foglia con limoni, raccolgo
+limoni allora prendo sia funghi che basilico
+TROVATO IL MOTIVO
+se clicco per raccogliere una qualsiasi cosa, e dovrebbe andare su un altro slot, l'oggetto viene aggiunto correttamente
+ma se il primo slot libero invece é la "mano", non viene sovrascritto e l'oggeto viene perso
+ecco perchè lo stem viene aggiunto, perchè viene messo nello slot a fianco della mano
 
 aggiustare tutti i valori di crescita
 
-eliminare le spore, fungo piantabile direttamente con se stesso
-
-add bonemeal custom support
+? add bonemeal custom support
